cumulative layout shift fix

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -381,3 +381,6 @@ button:focus {
     outline: none;
   }
 }
+.mobile-footer {
+  bottom: -400px;
+}
